Added Ping test

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
             <div class="canvas-container"></div>
             <div class="side-container">
                 <div class="online">
-                    <h2 id="onlineElt"></h2>
+                    <h3 class="statsElt" id="onlineElt">Players Online:</h3>
+                    <h3 class="statsElt" id="pingElt">Ping:</h3>
                 </div>
                 <div class="chat-container">
                     <ul id="messages"></ul>
