--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Simple Multiplayer Game</title>
+        <title>Circle Fight!</title>
 
         <link rel="stylesheet" href="style.css" />
 
